--- a/src/styles/moveable.scss
+++ b/src/styles/moveable.scss
@@ -32,7 +32,7 @@
   position: relative;
 }
 
-.timeline .timeline-media {
+.timeline .timeline-clip {
   position: absolute;
   width: 200px;
   height: 60px;
